--- a/json_rev.ipynb
+++ b/json_rev.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
     "\n",
     "base_dir = \"/Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar\"\n",
     "# base_dir = \"/Users/yejin/Library/CloudStorage/OneDrive-개인/데이터L/selectstar\"\n",
-    "data_dir = os.path.join(base_dir, 'data', 'FINAL', '1C_0910')\n",
+    "data_dir = os.path.join(base_dir, 'data', 'ORIGINAL', '1C')\n",
     "\n",
     "analysis = {1:'1차 분석', 2:'2차 분석', 3: '3차 분석'}\n",
     "buy = {1:'1차 구매', 2:'2차 구매', 3: '3차 구매'}"
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,10 +106,30 @@
     "lv5 = os.path.join(data_dir, \"Lv5\")\n",
     "\n",
     "for id in os.listdir(data_dir):\n",
-    "    if id in Lv3_isbn_id['관리번호'].astype(str).tolist():\n",
-    "        shutil.move(os.path.join(data_dir, str(id)), os.path.join(data_dir, 'Lv3_4'))\n",
-    "    elif id in Lv5_isbn_id['관리번호'].astype(str).tolist():\n",
-    "        shutil.move(os.path.join(data_dir, str(id)), os.path.join(data_dir, 'Lv5'))"
+    "    if os.path.splitext(id)[0] in Lv3_isbn_id['관리번호'].astype(str).tolist():\n",
+    "        shutil.move(os.path.join(data_dir, str(id)), lv34)\n",
+    "    elif os.path.splitext(id)[0] in Lv5_isbn_id['관리번호'].astype(str).tolist():\n",
+    "        shutil.move(os.path.join(data_dir, str(id)), lv5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.path.splitext(id)[0] in Lv5_isbn_id['관리번호'].astype(str).tolist()"
    ]
   },
   {
