--- a/judge_test.ipynb
+++ b/judge_test.ipynb
@@ -13,7 +13,353 @@
     "import json\n",
     "from openai import OpenAI\n",
     "import configparser\n",
-    "import argparse"
+    "import argparse\n",
+    "\n",
+    "import tools.ProcessFiles as pf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "excel = pf.get_excel_data(1)\n",
+    "json_files = pf.get_filelist(1, pf.FINAL_DATA_PATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ISBN</th>\n",
+       "      <th>도서명</th>\n",
+       "      <th>출판일</th>\n",
+       "      <th>코퍼스 1분류</th>\n",
+       "      <th>코퍼스 2분류</th>\n",
+       "      <th>비고</th>\n",
+       "      <th>분류</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>관리번호</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>225933255</th>\n",
+       "      <td>9791163478782</td>\n",
+       "      <td>금융의 현재와 미래</td>\n",
+       "      <td>2020-01-03</td>\n",
+       "      <td>금융</td>\n",
+       "      <td>기초</td>\n",
+       "      <td>시사</td>\n",
+       "      <td>Lv3/4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>239373741</th>\n",
+       "      <td>9788984059900</td>\n",
+       "      <td>요즘 금리 쉬운 경제</td>\n",
+       "      <td>2020-04-27</td>\n",
+       "      <td>금융</td>\n",
+       "      <td>기초</td>\n",
+       "      <td>시사</td>\n",
+       "      <td>Lv3/4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>243228629</th>\n",
+       "      <td>9788960542570</td>\n",
+       "      <td>알기 쉬운 보험 세테크 100% 활용법</td>\n",
+       "      <td>2020-06-23</td>\n",
+       "      <td>보험</td>\n",
+       "      <td>기초</td>\n",
+       "      <td>세무</td>\n",
+       "      <td>Lv3/4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>248779244</th>\n",
+       "      <td>9788957614358</td>\n",
+       "      <td>공정거래 용어사전</td>\n",
+       "      <td>2020-08-10</td>\n",
+       "      <td>금융</td>\n",
+       "      <td>기초</td>\n",
+       "      <td>용어</td>\n",
+       "      <td>Lv2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>250217022</th>\n",
+       "      <td>9791190820660</td>\n",
+       "      <td>1페이지 보험 정리의 기술</td>\n",
+       "      <td>2020-08-28</td>\n",
+       "      <td>보험</td>\n",
+       "      <td>기초</td>\n",
+       "      <td>시사</td>\n",
+       "      <td>Lv3/4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>358558337</th>\n",
+       "      <td>9791194682431</td>\n",
+       "      <td>현명한 대출 관리</td>\n",
+       "      <td>2025-02-26</td>\n",
+       "      <td>카드</td>\n",
+       "      <td>기초</td>\n",
+       "      <td>시사</td>\n",
+       "      <td>Lv2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>358558342</th>\n",
+       "      <td>9791194682479</td>\n",
+       "      <td>신용 관리의 모든 것</td>\n",
+       "      <td>2025-02-26</td>\n",
+       "      <td>카드</td>\n",
+       "      <td>기초</td>\n",
+       "      <td>시사</td>\n",
+       "      <td>Lv2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>358558344</th>\n",
+       "      <td>9791194682486</td>\n",
+       "      <td>부채 탈출의 기술</td>\n",
+       "      <td>2025-02-26</td>\n",
+       "      <td>카드</td>\n",
+       "      <td>기초</td>\n",
+       "      <td>시사</td>\n",
+       "      <td>Lv2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>358748005</th>\n",
+       "      <td>9791166791307</td>\n",
+       "      <td>어카운트 공인회계사(CPA) 1차-기업법 조문과 기출(2025)</td>\n",
+       "      <td>2025-02-19</td>\n",
+       "      <td>금융</td>\n",
+       "      <td>수험서</td>\n",
+       "      <td>CPA</td>\n",
+       "      <td>Lv2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>361239919</th>\n",
+       "      <td>9791138370714</td>\n",
+       "      <td>2025 시대에듀 차량손해사정사 2차 한권으로 끝내기</td>\n",
+       "      <td>2025-04-15</td>\n",
+       "      <td>보험</td>\n",
+       "      <td>수험서</td>\n",
+       "      <td>차량손해사정사</td>\n",
+       "      <td>Lv3/4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>81 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    ISBN                                  도서명        출판일  \\\n",
+       "관리번호                                                                       \n",
+       "225933255  9791163478782                           금융의 현재와 미래 2020-01-03   \n",
+       "239373741  9788984059900                          요즘 금리 쉬운 경제 2020-04-27   \n",
+       "243228629  9788960542570                알기 쉬운 보험 세테크 100% 활용법 2020-06-23   \n",
+       "248779244  9788957614358                            공정거래 용어사전 2020-08-10   \n",
+       "250217022  9791190820660                       1페이지 보험 정리의 기술 2020-08-28   \n",
+       "...                  ...                                  ...        ...   \n",
+       "358558337  9791194682431                            현명한 대출 관리 2025-02-26   \n",
+       "358558342  9791194682479                          신용 관리의 모든 것 2025-02-26   \n",
+       "358558344  9791194682486                            부채 탈출의 기술 2025-02-26   \n",
+       "358748005  9791166791307  어카운트 공인회계사(CPA) 1차-기업법 조문과 기출(2025) 2025-02-19   \n",
+       "361239919  9791138370714        2025 시대에듀 차량손해사정사 2차 한권으로 끝내기 2025-04-15   \n",
+       "\n",
+       "          코퍼스 1분류 코퍼스 2분류       비고     분류  \n",
+       "관리번호                                       \n",
+       "225933255      금융      기초       시사  Lv3/4  \n",
+       "239373741      금융      기초       시사  Lv3/4  \n",
+       "243228629      보험      기초       세무  Lv3/4  \n",
+       "248779244      금융      기초       용어    Lv2  \n",
+       "250217022      보험      기초       시사  Lv3/4  \n",
+       "...           ...     ...      ...    ...  \n",
+       "358558337      카드      기초       시사    Lv2  \n",
+       "358558342      카드      기초       시사    Lv2  \n",
+       "358558344      카드      기초       시사    Lv2  \n",
+       "358748005      금융     수험서      CPA    Lv2  \n",
+       "361239919      보험     수험서  차량손해사정사  Lv3/4  \n",
+       "\n",
+       "[81 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "excel[excel['분류'] != 'Lv5']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.path.splitext(os.path.basename(json_files[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sorted(lv234_qna)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "multiple, short, essay = [],[],[]\n",
+    "origin = json.load(open(data_dir+'/merged_qna_set.json', 'r', encoding='utf-8'))\n",
+    "for qna in origin:\n",
+    "    if qna.get('file_id') in lv234_qna:\n",
+    "        if qna.get('qna_type') == \"multiple-choice\":\n",
+    "            multiple.append(qna)\n",
+    "        elif qna.get('qna_type') == \"short-answer\":\n",
+    "            short.append(qna)\n",
+    "        elif qna.get('qna_type') == \"essay\":\n",
+    "            essay.append(qna)\n",
+    "# data_dir = os.path.join(base_dir,'Lv2', 're')\n",
+    "# origin = json.load(open(os.path.join(base_dir, 'merged_qna_set.json'), 'r', encoding='utf-8'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "short"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# parser = argparse.ArgumentParser()\n",
+    "# parser.add_argument(\"--model_name\", type=str)\n",
+    "# parser.add_argument(\"--task_files\", type=str)\n",
+    "# parser.add_argument(\"--config_path\", type=str)\n",
+    "# parser.add_argument(\"--res_path\", type=str)\n",
+    "# parser.add_argument(\"--api_type\", type=str)\n",
+    "# args = parser.parse_args()\n",
+    "\n",
+    "config = configparser.ConfigParser()\n",
+    "# config.read(args.config_path, encoding='utf-8')\n",
+    "config.read('judge_config.ini', encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config['OPENROUTER']['url']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = OpenAI(api_key=config[\"OPENROUTER\"][\"key\"], base_url=config[\"OPENROUTER\"][\"url\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "models = ['anthropic/claude-sonnet-4', 'google/gemini-2.5-flash', 'x-ai/grok-4-fast:free', 'openai/gpt-4.1', 'openai/gpt-oss-120b:free', 'openai/gpt-5', 'qwen/qwen3-next-80b-a3b-thinking', 'qwen/qwen3-235b-a22b-thinking-2507']\n",
+    "model_name = models[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "question = \"\"\"아래 질문을 읽고, \n",
+    "어떤 재화 시장에서 소비자잉여와 생산자잉여에 대한 설명으로 옳은 것은?(단, 수요곡선은 우하향하며, 공급곡선은 우상향한다.)\\n\\n① 소비자잉여는 실제로 지불한 금액이 지불할 용의가 있는 최대 금액을 초과하는 부분이다.\\n② 소비자잉여는 소비자가 재화의 소비에서 얻는 편익의 총합과 같다.\\n③ 고정비용이 없는 장기에 생산자잉여는 기업의 이윤과 같다.\\n④ 기업에 단위당 T원의 물품세를 부과하면 가격이 상승하여 생산자잉여가 증가한다.\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = client.chat.completions.create(\n",
+    "            model=model_name,\n",
+    "            temperature=float(config[\"PARAMS\"][\"temperature\"]),\n",
+    "            frequency_penalty=float(config[\"PARAMS\"][\"frequency_penalty\"]), \n",
+    "            presence_penalty=float(config[\"PARAMS\"][\"presence_penalty\"]),\n",
+    "            top_p=float(config[\"PARAMS\"][\"top_p\"]), \n",
+    "            max_tokens=int(config[\"PARAMS\"][\"max_tokens\"]), \n",
+    "            messages=[{\"role\": \"user\", \"content\": question}],\n",
+    "        )\n",
+    "llm_result = response.choices[0].message.content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llm_result"
    ]
   },
   {
