--- a/json_rev2.ipynb
+++ b/json_rev2.ipynb
@@ -1,42 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'284618539'"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import re, json, os\n",
-    "\n",
-    "base_dir = \"data/FINAL/1C_0910\"\n",
-    "data_dir = os.path.join(base_dir,'Lv2', 're')\n",
-    "\n",
-    "# # lv2\n",
-    "# name = sorted(os.listdir(data_dir))[1]\n",
-    "\n",
-    "# lv3/4\n",
-    "names = []\n",
-    "for n in sorted(os.listdir(data_dir)):\n",
-    "    if n.endswith('footnote'):\n",
-    "        names.append(n.split('_')[0])\n",
-    "\n",
-    "name = names[0].split('_')[0]\n",
-    "origin = json.load(open(os.path.join(data_dir, name+'_footnote', name+'.json'), 'r', encoding='utf-8'))\n",
-    "name"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -224,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +271,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "test",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -321,7 +285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
