--- a/judge_test.ipynb
+++ b/judge_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,11 +289,7 @@
     "# parser.add_argument(\"--config_path\", type=str)\n",
     "# parser.add_argument(\"--res_path\", type=str)\n",
     "# parser.add_argument(\"--api_type\", type=str)\n",
-    "# args = parser.parse_args()\n",
-    "\n",
-    "config = configparser.ConfigParser()\n",
-    "# config.read(args.config_path, encoding='utf-8')\n",
-    "config.read('judge_config.ini', encoding='utf-8')"
+    "# args = parser.parse_args()"
    ]
   },
   {
@@ -301,27 +297,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "config['OPENROUTER']['url']"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "client = OpenAI(api_key=config[\"OPENROUTER\"][\"key\"], base_url=config[\"OPENROUTER\"][\"url\"])"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "models = ['anthropic/claude-sonnet-4', 'google/gemini-2.5-flash', 'x-ai/grok-4-fast:free', 'openai/gpt-4.1', 'openai/gpt-oss-120b:free', 'openai/gpt-5', 'qwen/qwen3-next-80b-a3b-thinking', 'qwen/qwen3-235b-a22b-thinking-2507']\n",
-    "model_name = models[0]"
+    "models = ['anthropic/claude-sonnet-4', 'google/gemini-2.5-flash', 'x-ai/grok-4-fast:free', 'openai/gpt-4.1', 'openai/gpt-oss-120b:free', 'openai/gpt-5', 'qwen/qwen3-next-80b-a3b-thinking', 'qwen/qwen3-235b-a22b-thinking-2507']"
    ]
   },
   {
@@ -340,18 +331,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "response = client.chat.completions.create(\n",
-    "            model=model_name,\n",
-    "            temperature=float(config[\"PARAMS\"][\"temperature\"]),\n",
-    "            frequency_penalty=float(config[\"PARAMS\"][\"frequency_penalty\"]), \n",
-    "            presence_penalty=float(config[\"PARAMS\"][\"presence_penalty\"]),\n",
-    "            top_p=float(config[\"PARAMS\"][\"top_p\"]), \n",
-    "            max_tokens=int(config[\"PARAMS\"][\"max_tokens\"]), \n",
-    "            messages=[{\"role\": \"user\", \"content\": question}],\n",
-    "        )\n",
-    "llm_result = response.choices[0].message.content"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -368,72 +348,72 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def query_model_openrouter(model_name, config, task_file, retry = 3):\n",
-    "    client = OpenAI(api_key=config[\"OPENROUTER\"][\"key\"], base_url=config[\"OPENROUTER\"][\"url\"])\n",
-    "    df_task = pd.read_csv(task_file, encoding='utf-8')\n",
+    "# def query_model_openrouter(model_name, config, task_file, retry = 3):\n",
+    "#     client = OpenAI(api_key=config[\"OPENROUTER\"][\"key\"], base_url=config[\"OPENROUTER\"][\"url\"])\n",
+    "#     df_task = pd.read_csv(task_file, encoding='utf-8')\n",
     "\n",
-    "    task_name = task_file.split('/')[-1].split('.')[0]\n",
-    "    questions = list(df_task[\"instruction\"] + \"\\n\\n\" + df_task[\"question\"])\n",
+    "#     task_name = task_file.split('/')[-1].split('.')[0]\n",
+    "#     questions = list(df_task[\"instruction\"] + \"\\n\\n\" + df_task[\"question\"])\n",
     "\n",
-    "    results = []\n",
-    "    for question in tqdm(questions, desc=task_name):\n",
-    "        success = False\n",
-    "        trial = 0\n",
-    "        while(not success and trial < retry):\n",
-    "            try:\n",
-    "                response = client.chat.completions.create(\n",
-    "                    model=model_name,\n",
-    "                    temperature=float(config[\"PARAMS\"][\"temperature\"]),\n",
-    "                    frequency_penalty=float(config[\"PARAMS\"][\"frequency_penalty\"]), \n",
-    "                    presence_penalty=float(config[\"PARAMS\"][\"presence_penalty\"]),\n",
-    "                    top_p=float(config[\"PARAMS\"][\"top_p\"]), \n",
-    "                    max_tokens=int(config[\"PARAMS\"][\"max_tokens\"]), \n",
-    "                    messages=[{\"role\": \"user\", \"content\": question}],\n",
-    "                )\n",
-    "                llm_result = response.choices[0].message.content\n",
+    "#     results = []\n",
+    "#     for question in tqdm(questions, desc=task_name):\n",
+    "#         success = False\n",
+    "#         trial = 0\n",
+    "#         while(not success and trial < retry):\n",
+    "#             try:\n",
+    "#                 response = client.chat.completions.create(\n",
+    "#                     model=model_name,\n",
+    "#                     temperature=float(config[\"PARAMS\"][\"temperature\"]),\n",
+    "#                     frequency_penalty=float(config[\"PARAMS\"][\"frequency_penalty\"]), \n",
+    "#                     presence_penalty=float(config[\"PARAMS\"][\"presence_penalty\"]),\n",
+    "#                     top_p=float(config[\"PARAMS\"][\"top_p\"]), \n",
+    "#                     max_tokens=int(config[\"PARAMS\"][\"max_tokens\"]), \n",
+    "#                     messages=[{\"role\": \"user\", \"content\": question}],\n",
+    "#                 )\n",
+    "#                 llm_result = response.choices[0].message.content\n",
     "\n",
-    "                # response = requests.post(\n",
-    "                #     url=config[\"OPENROUTER\"][\"url\"] + \"/chat/completions\",\n",
-    "                #     headers={\n",
-    "                #         \"Authorization\": \"Bearer \" + config[\"OPENROUTER\"][\"key\"],\n",
-    "                #     },\n",
-    "                #     data=json.dumps({\n",
-    "                #         \"model\": model_name, \n",
-    "                #         \"messages\": [\n",
-    "                #         {\n",
-    "                #             \"role\": \"user\",\n",
-    "                #             \"content\": question\n",
-    "                #         }\n",
-    "                #         ],\n",
-    "                #         \"provider\":{\n",
-    "                #             \"order\": [\"Together\", ], \n",
-    "                #         },\n",
-    "                #         \"temperature\":float(config[\"PARAMS\"][\"temperature\"]),\n",
-    "                #         \"frequency_penalty\":float(config[\"PARAMS\"][\"frequency_penalty\"]),\n",
-    "                #         \"presence_penalty\":float(config[\"PARAMS\"][\"presence_penalty\"]),\n",
-    "                #         \"top_p\":float(config[\"PARAMS\"][\"top_p\"]),\n",
-    "                #         \"max_tokens\":int(config[\"PARAMS\"][\"max_tokens\"]),\n",
-    "                #     }),\n",
-    "                #     timeout=180\n",
-    "                # )\n",
-    "                # response = response.json()\n",
-    "                # llm_result = response[\"choices\"][0][\"message\"][\"content\"]\n",
+    "#                 # response = requests.post(\n",
+    "#                 #     url=config[\"OPENROUTER\"][\"url\"] + \"/chat/completions\",\n",
+    "#                 #     headers={\n",
+    "#                 #         \"Authorization\": \"Bearer \" + config[\"OPENROUTER\"][\"key\"],\n",
+    "#                 #     },\n",
+    "#                 #     data=json.dumps({\n",
+    "#                 #         \"model\": model_name, \n",
+    "#                 #         \"messages\": [\n",
+    "#                 #         {\n",
+    "#                 #             \"role\": \"user\",\n",
+    "#                 #             \"content\": question\n",
+    "#                 #         }\n",
+    "#                 #         ],\n",
+    "#                 #         \"provider\":{\n",
+    "#                 #             \"order\": [\"Together\", ], \n",
+    "#                 #         },\n",
+    "#                 #         \"temperature\":float(config[\"PARAMS\"][\"temperature\"]),\n",
+    "#                 #         \"frequency_penalty\":float(config[\"PARAMS\"][\"frequency_penalty\"]),\n",
+    "#                 #         \"presence_penalty\":float(config[\"PARAMS\"][\"presence_penalty\"]),\n",
+    "#                 #         \"top_p\":float(config[\"PARAMS\"][\"top_p\"]),\n",
+    "#                 #         \"max_tokens\":int(config[\"PARAMS\"][\"max_tokens\"]),\n",
+    "#                 #     }),\n",
+    "#                 #     timeout=180\n",
+    "#                 # )\n",
+    "#                 # response = response.json()\n",
+    "#                 # llm_result = response[\"choices\"][0][\"message\"][\"content\"]\n",
     "\n",
-    "                results.append((question, llm_result))\n",
-    "                success = True\n",
-    "                trial += 1\n",
-    "            except Exception as e:\n",
-    "                success = False\n",
-    "                trial += 1\n",
-    "                print(f\"Trial:{trial}\\nError log:\\n{e}\")\n",
-    "                continue\n",
-    "        if not success:\n",
-    "            results.append((question, \"API ERROR\"))\n",
+    "#                 results.append((question, llm_result))\n",
+    "#                 success = True\n",
+    "#                 trial += 1\n",
+    "#             except Exception as e:\n",
+    "#                 success = False\n",
+    "#                 trial += 1\n",
+    "#                 print(f\"Trial:{trial}\\nError log:\\n{e}\")\n",
+    "#                 continue\n",
+    "#         if not success:\n",
+    "#             results.append((question, \"API ERROR\"))\n",
     "\n",
-    "    df_results = pd.DataFrame(results, columns=[\"prompt\", \"response\"])\n",
-    "    df_merge = pd.concat([df_task, df_results], axis=1)\n",
+    "#     df_results = pd.DataFrame(results, columns=[\"prompt\", \"response\"])\n",
+    "#     df_merge = pd.concat([df_task, df_results], axis=1)\n",
     "\n",
-    "    return df_merge"
+    "#     return df_merge"
    ]
   }
  ],
