--- a/qna_check.ipynb
+++ b/qna_check.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,39 +15,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "base_dir = \"data_yejin/FIN_workbook/1C\"\n",
     "# data_dir = os.path.join(base_dir,'Lv2', 're')\n",
-    "origin = json.load(open(os.path.join(base_dir, 'merged_extracted_qna.json'), 'r', encoding='utf-8'))\n",
+    "origin = json.load(open(os.path.join(base_dir, 'merged_extracted_qna_domain.json'), 'r', encoding='utf-8'))\n",
     "# origin = json.load(open('merged_qna_set.json', 'r', encoding='utf-8'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# len(origin)\n",
     "domain = {}\n",
-    "# domains = \"\"\"경제\n",
-    "# 경영\n",
-    "# 회계\n",
-    "# 세무\n",
-    "# 노무\n",
-    "# 통계\n",
-    "# 내부통제\n",
-    "# 영업\n",
-    "# 디지털\n",
-    "# 자산운용\n",
-    "# 리스크관리\n",
-    "# 보험계약\n",
-    "# 보상처리\n",
-    "# \"\"\"\n",
-    "domains = \"multiple-choice\\nshort-answer\\nessay\"\n",
+    "domains = \"\"\"경제\n",
+    "경영\n",
+    "회계\n",
+    "세무\n",
+    "노무\n",
+    "통계\n",
+    "내부통제\n",
+    "영업\n",
+    "디지털\n",
+    "자산운용\n",
+    "리스크관리\n",
+    "보험계약\n",
+    "보상처리\n",
+    "\"\"\"\n",
+    "# domains = \"multiple-choice\\nshort-answer\\nessay\"\n",
     "\n",
     "for d in domains.split('\\n'):\n",
     "    if len(d) > 0:\n",
@@ -56,27 +56,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "for question in origin:\n",
-    "    # domain[question.get('qna_domain')] += 1\n",
-    "    domain[question.get('qna_type')] += 1"
+    "    domain[question.get('qna_domain')] += 1\n",
+    "    # domain[question.get('qna_type')] += 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'multiple-choice': 2295, 'short-answer': 17, 'essay': 384}"
+       "{'경제': 163,\n",
+       " '경영': 139,\n",
+       " '회계': 480,\n",
+       " '세무': 10,\n",
+       " '노무': 0,\n",
+       " '통계': 1353,\n",
+       " '내부통제': 7,\n",
+       " '영업': 0,\n",
+       " '디지털': 2,\n",
+       " '자산운용': 119,\n",
+       " '리스크관리': 29,\n",
+       " '보험계약': 102,\n",
+       " '보상처리': 292}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for q in js:\n",
+    "# for q in js:\n",
     "    # if q.get('qna_domain') != '회계':\n",
     "        # print(q.get('qna_data'))"
    ]
