--- a/qna_check.ipynb
+++ b/qna_check.ipynb
@@ -138,7 +138,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "test",
    "language": "python",
    "name": "python3"
   },
@@ -152,7 +152,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
