[251001] fix_missing_qna.py 돌리는 중

--- a/qna_check.ipynb
+++ b/qna_check.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,19 +15,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "base_dir = \"data_yejin/FIN_workbook/1C\"\n",
     "# data_dir = os.path.join(base_dir,'Lv2', 're')\n",
-    "origin = json.load(open(os.path.join(base_dir, 'merged_extracted_qna_domain.json'), 'r', encoding='utf-8'))\n",
+    "origin = json.load(open(os.path.join(base_dir, 'merged_extracted_qna_domain_Lv2345_completed.json'), 'r', encoding='utf-8'))\n",
     "# origin = json.load(open('merged_qna_set.json', 'r', encoding='utf-8'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,17 +46,18 @@
     "리스크관리\n",
     "보험계약\n",
     "보상처리\n",
+    "\n",
     "\"\"\"\n",
     "# domains = \"multiple-choice\\nshort-answer\\nessay\"\n",
     "\n",
     "for d in domains.split('\\n'):\n",
-    "    if len(d) > 0:\n",
+    "    if len(d) >= 0:\n",
     "        domain[d] = 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,34 +68,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'경제': 163,\n",
-       " '경영': 139,\n",
-       " '회계': 480,\n",
-       " '세무': 10,\n",
-       " '노무': 0,\n",
-       " '통계': 1353,\n",
-       " '내부통제': 7,\n",
-       " '영업': 0,\n",
-       " '디지털': 2,\n",
-       " '자산운용': 119,\n",
-       " '리스크관리': 29,\n",
-       " '보험계약': 102,\n",
-       " '보상처리': 292}"
+       "{'경제': 1142,\n",
+       " '경영': 634,\n",
+       " '회계': 968,\n",
+       " '세무': 1056,\n",
+       " '노무': 5,\n",
+       " '통계': 17,\n",
+       " '내부통제': 777,\n",
+       " '영업': 25,\n",
+       " '디지털': 5,\n",
+       " '자산운용': 1709,\n",
+       " '리스크관리': 517,\n",
+       " '보험계약': 35,\n",
+       " '보상처리': 5,\n",
+       " '': 18026}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "domain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24921"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(origin)"
    ]
   },
   {
@@ -138,7 +160,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "test",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -152,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
