--- a/json_rev.ipynb
+++ b/json_rev.ipynb
@@ -562,7 +562,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "test",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -576,7 +576,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
